<resources>
    <string name="app_name">EUA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout_action">Cerrar sesion</string>
    <string name="programming_button">Programación</string>
    <string name="agencies_button">Agencias</string>
    <string name="remember_password">Recordar Contraseña</string>
    <string name="login_screen">Ingresa tu usuario y contraseña</string>
    <string name="stock_left_checkbox">Dejé stock</string>
    <string name="brochure_left_checkbox">Dejé folletería</string>
    <string name="interview_with">Me entrevisté con *</string>
    <string name="comments">Comentarios</string>
    <string name="mandatory_fields">* Datos obligatorios</string>
    <string name="report">Reportar</string>
    <string name="quantity_hint">Cantidad</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
