<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eua.SalesTrackingApp.AgencyReportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/interview_with"
        android:id="@+id/interview_view"
        android:textSize="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interviewer_name"
        android:inputType="textPersonName"
        android:layout_alignRight="@+id/stock_quantity"
        android:layout_alignEnd="@+id/stock_quantity"
        android:layout_toRightOf="@+id/mandatory_fields"
        android:layout_toEndOf="@+id/mandatory_fields"
        android:layout_above="@+id/stock_left_checkbox"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-8dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_left_checkbox"
        android:id="@+id/stock_left_checkbox"
        android:layout_below="@+id/interview_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textSize="18dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brochure_left_checkbox"
        android:id="@+id/brochure_left_checkbox"
        android:layout_below="@+id/stock_left_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/comments"
        android:id="@+id/comments"
        android:layout_below="@+id/brochure_left_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mandatory_fields"
        android:id="@+id/mandatory_fields"
        android:layout_alignBottom="@+id/report"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:id="@+id/report"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignRight="@+id/report"
        android:layout_alignLeft="@+id/report"
        android:layout_alignBottom="@+id/report"
        android:layout_alignTop="@+id/report"
        android:visibility="invisible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/comments_edit_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/report"
        android:layout_alignRight="@+id/report"
        android:layout_alignEnd="@+id/report"
        android:layout_below="@+id/comments"
        android:gravity="top|left"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/brochure_quantity"
        android:hint="@string/quantity_hint"
        android:layout_alignBottom="@+id/brochure_left_checkbox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/interview_view"
        android:layout_toEndOf="@+id/interview_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/stock_quantity"
        android:hint="@string/quantity_hint"
        android:layout_alignBottom="@+id/stock_left_checkbox"
        android:layout_alignRight="@+id/brochure_quantity"
        android:layout_alignEnd="@+id/brochure_quantity"
        android:layout_toRightOf="@+id/interview_view"
        android:layout_toEndOf="@+id/interview_view" />

</RelativeLayout>
